[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/windows/Options.gd" type="Script" id=1]
[ext_resource path="res://assets/monogram-extended.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=4]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 2 )

[node name="Popup" type="Popup"]
margin_right = 1400.0
margin_bottom = 800.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.584314, 0.584314, 0.584314, 1 )

[node name="Overarching" type="GridContainer" parent="."]
margin_left = 5.0
margin_right = 40.0
margin_bottom = 40.0
custom_constants/vseparation = 40

[node name="SoundContainer" type="VBoxContainer" parent="Overarching"]
margin_right = 1374.0
margin_bottom = 233.0

[node name="Title" type="RichTextLabel" parent="Overarching/SoundContainer"]
margin_right = 1374.0
margin_bottom = 105.0
custom_colors/default_color = Color( 0.305882, 0.917647, 1, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Sound"
text = "Sound"
fit_content_height = true

[node name="Sound" type="GridContainer" parent="Overarching/SoundContainer"]
margin_top = 109.0
margin_right = 1374.0
margin_bottom = 233.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="Master" type="HBoxContainer" parent="Overarching/SoundContainer/Sound"]
margin_right = 679.0
margin_bottom = 52.0
rect_min_size = Vector2( 675, 0 )

[node name="Label" type="Label" parent="Overarching/SoundContainer/Sound/Master"]
margin_right = 325.0
margin_bottom = 52.0
rect_min_size = Vector2( 325, 0 )
custom_fonts/font = SubResource( 1 )
text = "Master Volume"

[node name="MasterVol" type="HSlider" parent="Overarching/SoundContainer/Sound/Master"]
margin_left = 329.0
margin_right = 679.0
margin_bottom = 52.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
size_flags_vertical = 5
min_value = -20.0
max_value = 0.0
value = -5.0

[node name="Music" type="HBoxContainer" parent="Overarching/SoundContainer/Sound"]
margin_left = 699.0
margin_right = 1374.0
margin_bottom = 52.0
rect_min_size = Vector2( 675, 0 )
alignment = 1

[node name="Label" type="Label" parent="Overarching/SoundContainer/Sound/Music"]
margin_right = 288.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "Music Volume"

[node name="MusicVol" type="HSlider" parent="Overarching/SoundContainer/Sound/Music"]
margin_left = 292.0
margin_right = 675.0
margin_bottom = 52.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
size_flags_vertical = 5
min_value = -20.0
max_value = 0.0
value = -5.0

[node name="SFX" type="HBoxContainer" parent="Overarching/SoundContainer/Sound"]
margin_top = 72.0
margin_right = 679.0
margin_bottom = 124.0
rect_min_size = Vector2( 675, 0 )

[node name="Label" type="Label" parent="Overarching/SoundContainer/Sound/SFX"]
margin_right = 325.0
margin_bottom = 52.0
rect_min_size = Vector2( 325, 0 )
custom_fonts/font = SubResource( 3 )
text = "SFX Volume"

[node name="SFXVol" type="HSlider" parent="Overarching/SoundContainer/Sound/SFX"]
margin_left = 329.0
margin_right = 679.0
margin_bottom = 52.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
size_flags_vertical = 5
min_value = -20.0
max_value = 0.0
value = -5.0

[node name="DisplayContainer" type="VBoxContainer" parent="Overarching"]
margin_top = 273.0
margin_right = 1374.0
margin_bottom = 434.0

[node name="Title" type="RichTextLabel" parent="Overarching/DisplayContainer"]
margin_right = 1374.0
margin_bottom = 105.0
custom_colors/default_color = Color( 0.917647, 0.619608, 0.14902, 1 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "Display"
text = "Display"
fit_content_height = true

[node name="Display" type="GridContainer" parent="Overarching/DisplayContainer"]
margin_top = 109.0
margin_right = 1374.0
margin_bottom = 161.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Overarching/DisplayContainer/Display"]
margin_right = 675.0
margin_bottom = 52.0
rect_min_size = Vector2( 675, 0 )

[node name="Label" type="Label" parent="Overarching/DisplayContainer/Display/HBoxContainer"]
margin_right = 240.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 9 )
text = "Fullscreen"

[node name="isFullscreen" type="CheckButton" parent="Overarching/DisplayContainer/Display/HBoxContainer"]
margin_left = 244.0
margin_top = 12.0
margin_right = 675.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="ResolutionChoice" type="HBoxContainer" parent="Overarching/DisplayContainer/Display"]
margin_left = 695.0
margin_right = 1374.0
margin_bottom = 52.0
rect_min_size = Vector2( 675, 0 )

[node name="Label" type="Label" parent="Overarching/DisplayContainer/Display/ResolutionChoice"]
margin_right = 325.0
margin_bottom = 52.0
rect_min_size = Vector2( 325, 0 )
custom_fonts/font = SubResource( 7 )
text = "Resolution"

[node name="resOptions" type="OptionButton" parent="Overarching/DisplayContainer/Display/ResolutionChoice"]
margin_left = 329.0
margin_top = 20.0
margin_right = 679.0
margin_bottom = 52.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
size_flags_vertical = 8
custom_fonts/font = SubResource( 8 )

[connection signal="value_changed" from="Overarching/SoundContainer/Sound/Master/MasterVol" to="." method="_on_MasterVol_value_changed"]
[connection signal="value_changed" from="Overarching/SoundContainer/Sound/Music/MusicVol" to="." method="_on_MusicVol_value_changed"]
[connection signal="value_changed" from="Overarching/SoundContainer/Sound/SFX/SFXVol" to="." method="_on_SFXVol_value_changed"]
[connection signal="toggled" from="Overarching/DisplayContainer/Display/HBoxContainer/isFullscreen" to="." method="_on_isFullscreen_toggled"]
[connection signal="item_selected" from="Overarching/DisplayContainer/Display/ResolutionChoice/resOptions" to="." method="_on_resOptions_item_selected"]
